Revert "- iOS 9 overflow hidden fix"
This reverts commit 5d8aacde7bd44cf1f7812f579036d8b55880373a.

--- a/website/src/resources/css/style-reset.css
+++ b/website/src/resources/css/style-reset.css
@@ -27,11 +27,6 @@ time, mark, audio, video {
     background:transparent;
 }
 
-html, body {
-    position: relative;
-    height: 100%;
-}
-
 body {
     line-height:1;
 }
